# virtual_drone_crowd

./: .gitignore  AGENTS.md  Dockerfile  README.md  README_HE.md  README_PL.md  README_UA.md  ROADMAP.md  SYSTEM_DOCUMENTATION.md  SYSTEM_DOCUMENTATION_PL.md  TESTING.md  WORKING_PLAN.md  docker-compose.yml  oak_d_pro_snippet.xml  visualize_on_host.py
docker/: entrypoint.sh
docker/zenoh/: drone_1.json5  drone_2.json5  drone_3.json5  drone_4.json5
docs/: Drone MAVLink Integration Prompt Generation.md  Drone Swarm Evacuation Project Plan.md  Drone Swarm Evacuation Project Plan_PL.md  Drone Swarm Evacuation Project Plan_UA.md  Drone Swarm Project Documentation and README.md  Projekt Dronów SAR_ Ewakuacja Człowieka.md  Safety_Case_SORA.md  Safety_Case_SORA_PL.md  Safety_Case_SORA_UA.md  Technical Architecture.md  Technical Architecture_PL.md  Technical Architecture_UA.md
sar_swarm_ws/src/heavy_lift_core/: Cargo.toml
sar_swarm_ws/src/heavy_lift_core/action/: Evacuate.action
sar_swarm_ws/src/heavy_lift_core/heavy_lift_msgs_mock/: Cargo.toml
sar_swarm_ws/src/heavy_lift_core/heavy_lift_msgs_mock/src/: lib.rs
sar_swarm_ws/src/heavy_lift_core/src/: lib.rs  main.rs
sar_swarm_ws/src/sar_perception/: README.md  package.xml  setup.py  test_perception.py
sar_swarm_ws/src/sar_perception/sar_perception/: detector.py  object_localizer.py  search_planner.py
sar_swarm_ws/src/sar_perception/test/: test_detector.py  (+2 more)
sar_swarm_ws/src/sar_simulation/: README.md  mock_drone_sim.py  run_search_with_host_viz.sh  run_test_graphical.sh  run_test_with_host_viz.sh  run_test_with_viz.sh  search_task.py  test_sim.py  test_swarm_flight.py  visualize_swarm.py  visualize_swarm_graphical.py  visualize_udp_relay.py
sar_swarm_ws/src/sar_swarm_control/: Cargo.toml  TESTING.md  package.xml  swarm_controller.py
sar_swarm_ws/src/sar_swarm_control/px4_msgs_mock/: Cargo.toml
sar_swarm_ws/src/sar_swarm_control/px4_msgs_mock/src/: lib.rs
sar_swarm_ws/src/sar_swarm_control/sar_swarm_ws/src/sar_perception/tests/: test_detector.py
sar_swarm_ws/src/sar_swarm_control/sar_swarm_ws/src/sar_swarm_control/src/: utils.rs
sar_swarm_ws/src/sar_swarm_control/src/: boids.rs  communication.rs  lib.rs  main.rs  offboard_control_node.rs  search.rs  tests.rs  tests_standalone.rs  utils.rs
