[package]
name = "heavy_lift_core"
version = "0.1.0"
edition = "2021"

[dependencies]
rclrs = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.10", features = ["full"] }
heavy_lift_msgs = { path = "./heavy_lift_msgs_mock" }

[[bin]]
name = "evacuation_director"
path = "src/main.rs"
